--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EcoPuff</title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
-    <h2>o começo da gloria......</h2>
+    <header>
+        <div class="logo">
+            <img src="../styles/img/ecopuff-logo.png" alt="EcoPuff Logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Sobre</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="carrinho.html">Carrinho</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Lorem Ipsum is simply dummy text to you</h1>
+                <div class="hero-image">
+                    <img src="../styles/img/content-1-vape.png" alt="Plantas e dispositivo EcoPuff">
+                </div>
+            </div>
+        </section>
+
+        <section class="about-project">
+            <div>
+                <div class="about-image">
+                    <img src="../styles/img/content-2-vape.png" alt="Mãos segurando planta em recipiente">
+                </div>
+                <div class="about-content">
+                    <h2>Sobre o Projeto</h2>
+                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="how-it-works">
+            <h2>Como Funciona</h2>
+            <div class="features-grid">
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <img src="../styles/img/coleta-inteligente-icon.png" alt="Ícone de coleta">
+                    </div>
+                    <h3>Coleta Inteligente</h3>
+                    <p>Lorem ipsum is simply dummy text of the printing.</p>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <img src="../styles/img/reciclagem-icon.png" alt="Ícone de reciclagem">
+                    </div>
+                    <h3>Reciclagem Técnica</h3>
+                    <p>Lorem ipsum is simply dummy text of the printing.</p>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <img src="../styles/img/desmontagem-icon.png" alt="Ícone de desmontagem">
+                    </div>
+                    <h3>Desmontagem Segura</h3>
+                    <p>Lorem ipsum is simply dummy text of the printing.</p>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <img src="../styles/img/reutilizacao-icon.png" alt="Ícone de educação">
+                    </div>
+                    <h3>Reutilização Educacional</h3>
+                    <p>Lorem ipsum is simply dummy text of the printing.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="benefits">
+            <h2>Benefícios</h2>
+            <div class="benefits-grid">
+                <div class="benefit-item">
+                    <div class="benefit-icon">
+                        <img src="../styles/img/reducao-icon.png" alt="Ícone de redução de resíduos">
+                    </div>
+                    <p>Redução de Resíduos</p>
+                </div>
+                <div class="benefit-item">
+                    <div class="benefit-icon">
+                        <img src="../styles/img/reaproveitamento-icon.png" alt="Ícone de reaproveitamento">
+                    </div>
+                    <p>Reaproveitamento Inteligente</p>
+                </div>
+                <div class="benefit-item">
+                    <div class="benefit-icon">
+                        <img src="../styles/img/economia-icon.png" alt="Ícone de economia circular">
+                    </div>
+                    <p>Economia Circular</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>ecopuff@gmail.com.br</p>
+        <div class="footer-logo">
+            <img src="../styles/img/ecopuff-logo.png" alt="EcoPuff Logo">
+        </div>
+    </footer>
 </body>
 </html>
