Added some html for register and login

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcoPuff</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <title>EcoPuff - Turning E-Waste into Innovation</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="../styles/img/ecopuff-logo.png" alt="EcoPuff Logo">
+            <img src="./styles/img/ecopuff-logo.png" alt="EcoPuff Logo">
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Sobre</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="contato.html">Contato</a></li>
-                <li><a href="carrinho.html">Carrinho</a></li>
+                <li><a href="index.html">About</a></li>
+                <li><a href="produtos.html">Products</a></li>
+                <li><a href="contato.html">Contact</a></li>
+                <li><a href="carrinho.html">Cart</a></li>
             </ul>
         </nav>
     </header>
@@ -25,9 +25,9 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Lorem Ipsum is simply dummy text to you</h1>
+                <h1>Transforming E-Cigarette Waste into Educational Opportunities</h1>
                 <div class="hero-image">
-                    <img src="../styles/img/content-1-vape.png" alt="Plantas e dispositivo EcoPuff">
+                    <img src="./styles/img/content-1-vape.png" alt="EcoPuff device with plants, symbolizing eco-friendliness">
                 </div>
             </div>
         </section>
@@ -35,69 +35,75 @@
         <section class="about-project">
             <div>
                 <div class="about-image">
-                    <img src="../styles/img/content-2-vape.png" alt="Mãos segurando planta em recipiente">
+                    <img src="./styles/img/content-2-vape.png" alt="Hands holding a plant in a container, representing growth and recycling">
                 </div>
                 <div class="about-content">
-                    <h2>Sobre o Projeto</h2>
-                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <h2>About the Project</h2>
+                    <p>EcoPuff is dedicated to tackling electronic waste by transforming discarded e-cigarettes into valuable educational kits. Our primary audience includes schools and social institutions interested in purchasing or renting these kits. Each kit comes with comprehensive guides, empowering students and participants in social projects to assemble various useful items and develop crucial technological skills. We aim to make a positive social impact by fostering innovation and learning, while also contributing to a healthier environment.</p>
                 </div>
             </div>
         </section>
 
         <section class="how-it-works">
-            <h2>Como Funciona</h2>
+            <h2>How It Works</h2>
             <div class="features-grid">
                 <div class="feature-item">
                     <div class="feature-icon">
-                        <img src="../styles/img/coleta-inteligente-icon.png" alt="Ícone de coleta">
+                        <img src="./styles/img/coleta-inteligente-icon.png" alt="Collection icon">
                     </div>
-                    <h3>Coleta Inteligente</h3>
-                    <p>Lorem ipsum is simply dummy text of the printing.</p>
+                    <h3>Responsible Collection</h3>
+                    <p>We focus on establishing effective channels for collecting discarded e-cigarettes to ensure a steady supply for recycling.</p>
                 </div>
                 <div class="feature-item">
                     <div class="feature-icon">
-                        <img src="../styles/img/reciclagem-icon.png" alt="Ícone de reciclagem">
+                        <img src="./styles/img/desmontagem-icon.png" alt="Disassembly icon">
                     </div>
-                    <h3>Reciclagem Técnica</h3>
-                    <p>Lorem ipsum is simply dummy text of the printing.</p>
+                    <h3>Safe Disassembly</h3>
+                    <p>E-cigarettes are carefully disassembled, separating components like batteries, plastic, and electronics for proper processing.</p>
                 </div>
                 <div class="feature-item">
                     <div class="feature-icon">
-                        <img src="../styles/img/desmontagem-icon.png" alt="Ícone de desmontagem">
+                        <img src="./styles/img/reciclagem-icon.png" alt="Recycling icon">
                     </div>
-                    <h3>Desmontagem Segura</h3>
-                    <p>Lorem ipsum is simply dummy text of the printing.</p>
+                    <h3>Technical Recycling</h3>
+                    <p>Recovered materials are processed and recycled, preparing them for a new life as components in our educational kits.</p>
                 </div>
                 <div class="feature-item">
                     <div class="feature-icon">
-                        <img src="../styles/img/reutilizacao-icon.png" alt="Ícone de educação">
+                        <img src="./styles/img/reutilizacao-icon.png" alt="Educational reuse icon">
                     </div>
-                    <h3>Reutilização Educacional</h3>
-                    <p>Lorem ipsum is simply dummy text of the printing.</p>
+                    <h3>Educational Reuse</h3>
+                    <p>Recycled components are assembled into kits designed for educational projects, such as rechargeable LED lanterns or power banks, complete with assembly guides.</p>
                 </div>
             </div>
         </section>
 
         <section class="benefits">
-            <h2>Benefícios</h2>
+            <h2>Benefits</h2>
             <div class="benefits-grid">
                 <div class="benefit-item">
                     <div class="benefit-icon">
-                        <img src="../styles/img/reducao-icon.png" alt="Ícone de redução de resíduos">
+                        <img src="./styles/img/reducao-icon.png" alt="Waste reduction icon">
                     </div>
-                    <p>Redução de Resíduos</p>
+                    <p>Significant Reduction of E-Waste</p>
                 </div>
                 <div class="benefit-item">
                     <div class="benefit-icon">
-                        <img src="../styles/img/reaproveitamento-icon.png" alt="Ícone de reaproveitamento">
+                        <img src="./styles/img/reaproveitamento-icon.png" alt="Intelligent reuse icon">
                     </div>
-                    <p>Reaproveitamento Inteligente</p>
+                    <p>Smart Reuse of Materials</p>
                 </div>
                 <div class="benefit-item">
                     <div class="benefit-icon">
-                        <img src="../styles/img/economia-icon.png" alt="Ícone de economia circular">
+                        <img src="./styles/img/economia-icon.png" alt="Circular economy icon">
                     </div>
-                    <p>Economia Circular</p>
+                    <p>Promoting a Circular Economy</p>
+                </div>
+                <div class="benefit-item"> // Added a new benefit based on your project description
+                    <div class="benefit-icon">
+                         <img src="./styles/img/reutilizacao-icon.png" alt="Skill development icon"> // Consider creating a specific icon for this
+                    </div>
+                    <p>Fostering Tech Skills & Environmental Awareness</p>
                 </div>
             </div>
         </section>
@@ -106,7 +112,7 @@
     <footer>
         <p>ecopuff@gmail.com.br</p>
         <div class="footer-logo">
-            <img src="../styles/img/ecopuff-logo.png" alt="EcoPuff Logo">
+            <img src="./styles/img/ecopuff-logo.png" alt="EcoPuff Logo">
         </div>
     </footer>
 </body>
