Finished the login/register setup on the frontend

--- a/public/index.html
+++ b/public/index.html
@@ -99,9 +99,9 @@
                     </div>
                     <p>Promoting a Circular Economy</p>
                 </div>
-                <div class="benefit-item"> // Added a new benefit based on your project description
+                <div class="benefit-item"> 
                     <div class="benefit-icon">
-                         <img src="./styles/img/reutilizacao-icon.png" alt="Skill development icon"> // Consider creating a specific icon for this
+                         <img src="./styles/img/reutilizacao-icon.png" alt="Skill development icon"> 
                     </div>
                     <p>Fostering Tech Skills & Environmental Awareness</p>
                 </div>
