--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
-                <li><a href="produtos.html">Products</a></li>
-                <li><a href="contato.html">Contact</a></li>
-                <li><a href="carrinho.html">Cart</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
     </header>
