Made the fuunctionality to add to the cart on the frontend, needs to be reviewed and optimized

--- a/public/products.html
+++ b/public/products.html
@@ -55,8 +55,10 @@
     </a>
     </footer>
     
+<script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./products.js"></script>
+
+    <script src="./products.js" ></script>
     <script>
         document.getElementById('currentYear').textContent = new Date().getFullYear();
     </script>
