--- a/public/products.html
+++ b/public/products.html
@@ -29,10 +29,8 @@
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-10">Our Products</h1>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8" id="products">
-
-            
-
-            </div>
+            <p class="p-19 text-center text-gray-500">Loading products...</p>
+        </div>
            
     </main>
 
